--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,9 @@
 // Colors
+$dark-blue: #1f2833;
+$silver: #c5c6c7;
+$light-blue: #66fcf1;
+$blue: #45a29e;
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
