--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
-@import './base/settings';
-@import './base/base';
+@import "./base/settings";
+@import "./base/base";
+@import "./components/box-layout";
+@import "./components/content-container";
+@import "./components/header";
+@import "./components/page-header";
