--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -5,17 +9,29 @@ html {
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+  color: $dark-blue;
+  margin-bottom: $l-size;
 }
 
 .button {
   padding: $s-size $m-size;
   background-color: $blue;
+  height: 50px;
+  line-height: 25px;
   border: none;
-  color: oldlace;
+  color: #fdf5e6;
+  max-width: 200px;
   font-weight: bold;
   border-bottom: 3px solid #2b8a85;
   transition: 0.3;
   cursor: pointer;
+}
+
+.button-remove {
+  @extend .button;
+  background-color: silver;
+  border-bottom: 3px solid grey;
+  width: 120px;
 }
 
 .button:hover {
