--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,9 @@
 @import "./components/content-container";
 @import "./components/header";
 @import "./components/page-header";
+@import "./components/filters";
+@import "./components/inputs";
+@import "./components/form";
+@import "./components/visibility";
+@import "./components/list";
+@import "./components/loader";
